// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Widget should render the Widget component 1`] = `
<div>
  <article
    class="widget svelte-pntwh0"
  >
     
  </article>
</div>
`;

exports[`Widget should render the Widget component with loading spinner 1`] = `
<div>
  <article
    class="widget svelte-pntwh0"
  >
    <div
      class="spinner-container svelte-12lddhy"
      style="--z-index: 10;"
    >
      <div
        class="spinner dot-0 svelte-12lddhy"
      />
      <div
        class="spinner dot-1 svelte-12lddhy"
      />
      <div
        class="spinner dot-2 svelte-12lddhy"
      />
    </div>
     
  </article>
</div>
`;
